--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,12 @@ license.workspace = true
 description = "Egui integration to easily create Desktop Overlays"
 
 [features]
-default = ["egui_default", "glfw_default", "three_d"]
+default = ["egui_default", "glfw_default", "glow"]
 egui_default = ["egui/default"]
 glfw_default = ["egui_window_glfw_passthrough/default"]
 three_d = ["dep:egui_render_three_d"]
 wgpu = ["dep:egui_render_wgpu"]
+glow = ["dep:egui_render_glow"]
 
 [dependencies]
 egui_window_glfw_passthrough = { version = "0.8", path = "crates/egui_window_glfw_passthrough", default-features = false }
@@ -21,6 +22,7 @@ raw-window-handle = { workspace = true }
 egui_render_three_d = { version = "0.8", path = "crates/egui_render_three_d", optional = true }
 # because opengl doesn't work on mac :((
 egui_render_wgpu = { version = "0.8", path = "crates/egui_render_wgpu", optional = true }
+egui_render_glow = { version = "0.8", path = "crates/egui_render_glow", optional = true }
 
 
 [workspace.dependencies]
@@ -30,7 +32,8 @@ tracing = { version = "0.1", default-features = false }
 raw-window-handle = { version = "0.6" }
 egui_overlay = { version = "0.8", path = ".", default-features = false}
 egui_render_three_d = { version = "0.8", path = "crates/egui_render_three_d" }
-egui_render_wgpu = { version = "0.8", path = "crates/egui_render_wgpu" }
+egui_render_wgpu = { version = "0.8", path = "crates/egui_render_wgpu" }    
+egui_render_glow = { version = "0.8", path = "crates/egui_render_glow" }
 egui_window_glfw_passthrough = { version = "0.8", path = "crates/egui_window_glfw_passthrough" }
 
 [workspace]
