add glow renderer

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,12 @@ license.workspace = true
 description = "Egui integration to easily create Desktop Overlays"
 
 [features]
-default = ["egui_default", "glfw_default", "three_d"]
+default = ["egui_default", "glfw_default", "glow"]
 egui_default = ["egui/default"]
 glfw_default = ["egui_window_glfw_passthrough/default"]
 three_d = ["dep:egui_render_three_d"]
 wgpu = ["dep:egui_render_wgpu"]
+glow = ["dep:egui_render_glow"]
 
 [dependencies]
 egui_window_glfw_passthrough = { version = "0.9", path = "crates/egui_window_glfw_passthrough", default-features = false }
