--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ license.workspace = true
 description = "Egui integration to easily create Desktop Overlays"
 
 [features]
-default = ["egui_default", "glfw_default", "glow"]
+default = ["egui_default", "glfw_default", "three_d"]
 egui_default = ["egui/default"]
 glfw_default = ["egui_window_glfw_passthrough/default"]
 three_d = ["dep:egui_render_three_d"]
