--- a/examples/basic/Cargo.toml
+++ b/examples/basic/Cargo.toml
@@ -8,7 +8,7 @@ description = "A basic example that shows how we can use egui_overlay crate"
 publish = false
 
 [features]
-default = ["glow"]
+default = ["three_d"]
 three_d = ["dep:egui_render_three_d", "egui_overlay/three_d"]
 wgpu = ["dep:egui_render_wgpu", "egui_overlay/wgpu"]
 glow = ["dep:egui_render_glow", "egui_overlay/glow"]
