--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,6 @@ egui_default = ["egui/default"]
 glfw_default = ["egui_window_glfw_passthrough/default"]
 three_d = ["dep:egui_render_three_d"]
 wgpu = ["dep:egui_render_wgpu"]
-glow = ["dep:egui_render_glow"]
 
 [dependencies]
 egui_window_glfw_passthrough = { version = "0.9", path = "crates/egui_window_glfw_passthrough", default-features = false }
@@ -32,6 +31,7 @@ raw-window-handle = { version = "0.6" }
 egui_overlay = { version = "0.9", path = ".", default-features = false }
 egui_render_three_d = { version = "0.9", path = "crates/egui_render_three_d" }
 egui_render_wgpu = { version = "0.9", path = "crates/egui_render_wgpu" }
+egui_render_glow = { version = "0.9", path = "crates/egui_render_glow" }
 egui_window_glfw_passthrough = { version = "0.9", path = "crates/egui_window_glfw_passthrough" }
 
 [workspace]
