--- a/examples/basic/Cargo.toml
+++ b/examples/basic/Cargo.toml
@@ -11,12 +11,14 @@ publish = false
 default = ["three_d"]
 three_d = ["dep:egui_render_three_d", "egui_overlay/three_d"]
 wgpu = ["dep:egui_render_wgpu", "egui_overlay/wgpu"]
-glow = ["dep:egui_render_glow", "egui_overlay/glow"]
 
 [dependencies]
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 egui = { workspace = true }
-egui_overlay = { workspace = true, default-features = false, features = ["egui_default", "glfw_default"]}
+egui_overlay = { workspace = true, default-features = false, features = [
+    "egui_default",
+    "glfw_default",
+] }
 egui_window_glfw_passthrough = { workspace = true }
 egui_render_three_d = { workspace = true, optional = true }
 egui_render_wgpu = { workspace = true, optional = true }
