--- a/examples/icon/Cargo.toml
+++ b/examples/icon/Cargo.toml
@@ -8,8 +8,7 @@ description = "shows how we can set a window icon"
 publish = false
 
 [features]
-default = ["glow"]
-glow = ["dep:egui_render_glow", "egui_overlay/glow"]
+default = ["wgpu"]
 three_d = ["dep:egui_render_three_d", "egui_overlay/three_d"]
 wgpu = ["dep:egui_render_wgpu", "egui_overlay/wgpu"]
 
